--- a/style.css
+++ b/style.css
@@ -486,3 +486,13 @@ a {
 #timeofsubmission {
     display: none;
 }
+
+#preloader {
+    background: #000 url("./beyti.gif") no-repeat center center;
+    background-size: 50%;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background-color: #000000;
+    z-index: 100;
+}
