--- a/style.css
+++ b/style.css
@@ -497,7 +497,7 @@ a {
     width: 100%;
     height: 100vh;
     position: fixed;
-    background-color: #000000;
+    background-color: #ffffff;
     z-index: 100;
 }
 
