--- a/style.css
+++ b/style.css
@@ -490,6 +490,13 @@ a {
     display: none;
 }
 
+#time {
+    width: 100%;
+    background-color: blue;
+    
+    
+}
+
 #preloader {
     background: #fff url("./beyti.gif") no-repeat center center;
     background-size: 100%;
@@ -503,3 +510,4 @@ a {
 iframe {
     display: none;
 }
+
